# Serverless

./: README.md  pyproject.toml
api/: Readme.md  api.py  get.py  get_post.py
